updated image slider

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <h3>Image Slider</h3>
     <div class="slider">
         <div class="sliders">
-            <img src="https://img.freepik.com/free-photo/anime-style-illustration-rose_23-2151548354.jpg" alt="image 1">
-            <img src="https://wallpapers.com/images/hd/anime-flower-qy5bqect936kupnd.jpg" alt="image 2">
-            <img src="https://img.freepik.com/free-photo/anime-style-illustration-rose_23-2151548355.jpg" alt="image 3">
+            <img src="https://img.freepik.com/free-photo/anime-style-illustration-rose_23-2151548354.jpg" alt="image of a red flower">
+            <img src="https://wallpapers.com/images/hd/anime-flower-qy5bqect936kupnd.jpg" alt="image of a white flower">
+            <img src="https://img.freepik.com/free-photo/anime-style-illustration-rose_23-2151548355.jpg" alt="image of a rose">
         </div>
         <button class="prev" onclick="prevSlide()">&#10094</button>
         <button class="next" onclick="nextSlide()">&#10095</button>
